bones gets scaled chaotically between NLA stripes transition. #35856

Closed
opened 2013-06-24 07:49:39 +02:00 by Yousef Harfoush · 7 comments

%%%--- Operating System, Graphics card ---
windows 8 x64, gt8600

- Blender version with error, and version that worked ---

from revision 57333 and to latest trunk

- Short description of error ---
  • bones gets scaled chaotically between NLA stripes transition.

    • Steps for others to reproduce the error (preferably based on attached .blend file) ---
      i attached an blend with and armature moving with nla stripts
      just scroll the time line near the transition and you'll see what i mean.

%%%

%%%--- Operating System, Graphics card --- windows 8 x64, gt8600 - Blender version with error, and version that worked --- from revision 57333 and to latest trunk - Short description of error --- - bones gets scaled chaotically between NLA stripes transition. - Steps for others to reproduce the error (preferably based on attached .blend file) --- i attached an blend with and armature moving with nla stripts just scroll the time line near the transition and you'll see what i mean. %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%I cannot seem to open your file. Could you try uploading it without compression?%%%

%%%I cannot seem to open your file. Could you try uploading it without compression?%%%
Author
Member

%%%added a .blend version%%%

%%%added a .blend version%%%
Author
Member

%%%there are an error with the tracker, here is the link:
http://www.pasteall.org/blend/22406%%%

%%%there are an error with the tracker, here is the link: http://www.pasteall.org/blend/22406%%%
Member

%%%Ah ok, I think I know what's happening here. The possibility of this sort of thing happening when you've got bones being scaled is something I had predicted may happen when I committed r. 57333, though the exact set of problems seen here I hadn't imagined.

As a workaround for now, ensure you've got a strip below everything else where you've set the scale of all bones to 1.0, and the strip just stretches out to infinity either way. Even better, ensure you've got all bones keyed in their "rest" state for the shot, whatever that may be.%%%

%%%Ah ok, I think I know what's happening here. The possibility of this sort of thing happening when you've got bones being scaled is something I had predicted may happen when I committed r. 57333, though the exact set of problems seen here I hadn't imagined. As a workaround for now, ensure you've got a strip below everything else where you've set the scale of all bones to 1.0, and the strip just stretches out to infinity either way. Even better, ensure you've got all bones keyed in their "rest" state for the shot, whatever that may be.%%%
Member

%%%Ok, I've committed a fix which should fix the problem in this (and several other cases). I'm still not 100% certain if it has fixed all cases, though for most cases it should be good enough. :)%%%

%%%Ok, I've committed a fix which should fix the problem in this (and several other cases). I'm still not 100% certain if it has fixed all cases, though for most cases it should be good enough. :)%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35856
No description provided.